--- a/internship.html
+++ b/internship.html
@@ -41,11 +41,15 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.jobvite.com/certainaffinity/job/ouSy9fwN'>Certain Affinity, Inc. Careers - 3D Art Intern</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-29</p>
+<hr/>
 <h5><a href='http://jobs.jobvite.com/certainaffinity/job/ouSy9fwN'>Certain Affinity, Inc. Careers - 3D Art Intern</a></h5> 
 <p><span class="badge badge-light">Austin Austin</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://occasionbrands.applytojob.com/apply/WIQyBtI59n/Technology-Fall-Internship'>Technology (Fall Internship) - Occasion Brands - Career Page</a></h5> 
+<h5><a href='http://occasionbrands.applytojob.com/apply/WIQyBtI59n/Technology-Fall-Internship'>Technology (Fall Internship) - Occasion Brands - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
@@ -193,6 +197,16 @@
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
+<h5><a href='https://liqid.join.com/jobs/263436-financial-analyst-intern-m-w-d'>Financial Analyst Intern</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>20. Juli 2019 ... LIQID Investments GmbH has a job opening for Financial Analyst Intern (m/w/d) 
+in Berlin (published: 13.11.2018). Apply now or check the other available jobs.</p>
+<hr/>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://liqid.join.com/jobs/256603-intern-quantitative-analyst-m-w-d'>Intern Quantitative Analyst</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>17. Juli 2019 ... LIQID Investments GmbH has a job opening for Intern Quantitative Analyst (m/w/d
+) in Berlin (published: 13.11.2018). Apply now or check the other available?...</p>
+<hr/>
 <h5><a href='https://jobs.smartrecruiters.com/SeekaTechnology/743999692284350-marketing-internship'>Seeka Technology Marketing Internship | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Selangor, Malaysia</span></p>
 <p>Posted on: 2019-07-28</p>
@@ -295,7 +309,7 @@ Full time. Apply Now. Job role: As a data analyst, you will be responsible for?.
 <p><span class="badge badge-light">Vancouver</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/cross-country/job/oWOCafwg'>CrossCountry Mortgage, Inc Careers - Digital Marketing Intern</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/cross-country/job/oWOCafwg'>CrossCountry Mortgage, Inc Careers - Digital Marketing Intern</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -458,18 +472,6 @@ quality?...</p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
 <h5><a href='https://jobs.jobvite.com/lee/job/og6DafwT'>Lee Enterprises Careers - Copy Editor Intern</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-27</p>
-<hr/>
-<h5><a href='https://itron.referrals.selectminds.com/jobs/intern-business-analyst-2680'>Intern-Business Analyst - Itron Careers</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-27</p>
-<hr/>
-<h5><a href='http://fractalanalytics.applytojob.com/apply/7rUnlvdjE9/Intern-Information-Security'>Intern - Information Security - Fractal Analytics - Career Page</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-27</p>
-<hr/>
-<h5><a href='https://itron.referrals.selectminds.com/jobs/r-d-intern-hardware-design-engineering-2679'>R/D Intern - Hardware Design Engineering - Itron Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
