--- a/data-analyst.html
+++ b/data-analyst.html
@@ -47,6 +47,10 @@
   
 	
 <!--Begin body here --> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qC9aVfwA&k=Job&j=oG289fwJ&__jvst=Employee&__jvsd=sOJTqgwB&__jvsc=Twitter&bid=nwSGWLwg'>Freedom Financial Network Careers - Senior Data Analyst</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-07-29</p>
+<hr/>
 <h5><a href='https://jobs.lever.co/geophy/057a0777-9e2a-405f-bf27-828841484063'>GeoPhy - Data Analyst - Contextual Data</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-29</p>
@@ -59,7 +63,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/PublicisGroupe/743999692392569-manager-data-analysis'>Publicis Groupe Manager, Data & Analysis | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PublicisGroupe/743999692392569-manager-data-analysis'>Publicis Groupe Manager, Data & Analysis | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
@@ -71,7 +75,7 @@
 <p><span class="badge badge-light">Vancouver</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/credigy/ffca819b-16e6-4bda-8536-f40a6b1fe573'>Credigy - Senior Statistican</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/credigy/ffca819b-16e6-4bda-8536-f40a6b1fe573'>Credigy - Senior Statistican</a></h5> 
 <p><span class="badge badge-light">Atlanta</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
@@ -95,7 +99,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/evercompliant/3959133e-0138-4b86-a852-e03ac6d76a1c'>EverCompliant - Data Analyst, Data Team</a></h5> 
+<h5><a href='https://jobs.lever.co/evercompliant/3959133e-0138-4b86-a852-e03ac6d76a1c'>EverCompliant - Data Analyst, Data Team</a></h5> 
 <p><span class="badge badge-light">Tel Aviv</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
@@ -146,7 +150,7 @@
 <p>17. Juli 2019 ... Link Marketing Services AG has a job opening for (Senior) Projektleiter Analytics 
 / Data Analyst 80-100% (m/w) in Z?rich (published: 30.04.2019). Apply now or?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/yext/jobs/1790589'>Job Application for Data Analyst at Yext</a></h5> 
+<h5><a href='https://boards.greenhouse.io/yext/jobs/1790589'>Job Application for Data Analyst at Yext</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -193,7 +197,7 @@ Are you?...</p>
 <p>6 days ago ... The Analytics team is a critical function that supports data-driven decision-making 
 throughout Harry's. The team is the central nervous system of the organization?...</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/myntra/jobs/4354416002'>Job Application for Senior Data Analyst (Inventory) at Myntra Jabong</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/myntra/jobs/4354416002'>Job Application for Senior Data Analyst (Inventory) at Myntra Jabong</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... Apply Now. Senior Data Analyst (Inventory). at Myntra Jabong (View all jobs). 
 Bengaluru. NA. Apply for this Job. * Required. First Name *. Last Name *. Email *.</p>
@@ -291,7 +295,7 @@ data into information, information into insight and insight into business?...</p
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://protix.recruitee.com/o/internship-rd-data-analyst-summer-job'>Internship R&D Data Analyst & summer job - Protix</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://protix.recruitee.com/o/internship-rd-data-analyst-summer-job'>Internship R&D Data Analyst & summer job - Protix</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 15, 2019 ... We are building a fully automated hightech farm for a totally new industry, insect 
 breeding. Therefore, we are building the technology to understand and optimize
@@ -331,7 +335,7 @@ mobile studio, HARDlight. As part of the studio's Live Operations team, you woul
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/cision-emia/job/ozD79fwc'>Cision EMIA Careers - Data Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/cision-emia/job/ozD79fwc'>Cision EMIA Careers - Data Analyst</a></h5> 
 <p><span class="badge badge-light">London London</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -380,7 +384,7 @@ targets and schedules. Building dashboards within Google Data Studio so our?...<
 <p><span class="badge badge-light">North America</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://syneoshealth.referrals.selectminds.com/jobs/principal-biostatistician-30241'>Principal Biostatistician - Syneos Health Careers</a></h5> 
+<h5><a href='https://syneoshealth.referrals.selectminds.com/jobs/principal-biostatistician-30241'>Principal Biostatistician - Syneos Health Careers</a></h5> 
 <p><span class="badge badge-light">North America</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -392,7 +396,7 @@ targets and schedules. Building dashboards within Google Data Studio so our?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/bill/967ee523-681a-46e9-854a-db091815cdff'>Bill.com - Senior Risk Data Analyst</a></h5> 
+<h5><a href='https://jobs.lever.co/bill/967ee523-681a-46e9-854a-db091815cdff'>Bill.com - Senior Risk Data Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... preferably in Statistics, Physical Sciences, Computer Science, Economics, or a 
 related technical field; Experience using statistics and machine learning to solve
@@ -470,14 +474,10 @@ planning and analysis (FP&A) integrated analytics team, maintain responsibility?
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://605.workable.com/jobs/1042296'>Data Analyst - Apply online - 605 - Jobs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://605.workable.com/jobs/1042296'>Data Analyst - Apply online - 605 - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Apply online for the job of Data Analyst at 605. ... Data Analyst. Data Analyst. 
 Syosset, New York, United States ? Data Solutions. Description. ABOUT 605.</p>
-<hr/>
-<h5><a href='https://bdswiss.workable.com/jobs/1069250'>Marketing Acquistion Data Analyst - Apply online - BDSwiss - Jobs</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Jul 18, 2019 ... Apply online for the job of Marketing Acquistion Data Analyst at BDSwiss.</p>
 <hr/>
 
 
