--- a/data-architect.html
+++ b/data-architect.html
@@ -139,7 +139,7 @@ Developer Central. Solutions. Retail ? Hospitality ? Acquirers ? Petro. Support.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<h5><a href='https://huron.avature.net/careers/JobDetail/Big-Data-Technical-Architect-Mumbai/5788'>Big Data Technical Architect - Mumbai - Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://huron.avature.net/careers/JobDetail/Big-Data-Technical-Architect-Mumbai/5788'>Big Data Technical Architect - Mumbai - Careers</a></h5> 
 <p><span class="badge badge-light">Mumbai</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
@@ -201,7 +201,7 @@ created role, you will be responsible for building the foundation of our?...</p>
 <p>3 days ago ... The Architect will play a critical role in designing, developing and implementing 
 high performing applications using NOSQL DB and BigData...</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/sundial/job/c7igjkjogkzdou4jweofrxamue'>Software Engineer Database/Data Architect (11259) | Sundial Software Career Opportunities</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/sundial/job/c7igjkjogkzdou4jweofrxamue'>Software Engineer Database/Data Architect (11259) | Sundial Software Career Opportunities</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -247,7 +247,7 @@ best?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Lingoda/743999691800498-data-architecture-engineer-remote-preferred-'>Lingoda Data Architecture Engineer (Remote preferred) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Lingoda/743999691800498-data-architecture-engineer-remote-preferred-'>Lingoda Data Architecture Engineer (Remote preferred) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
@@ -281,7 +281,7 @@ database models; Documentation of functional requirements and system?...</p>
 <p><span class="badge badge-light">Philadelphia, PA</span></p>
 <p>Posted on: 2019-07-15</p>
 <hr/>
-<h5><a href='https://ordnancesurvey.csod.com/ats/careersite/jobdetails.aspx?site=1&c=ordnancesurvey&id=908&source=SocialMedia&utm_source=twitter&utm_medium=social&utm_term=&utm_content=&utm_campaign=eabd6045-fc90-4414-913a-bb6920ea66fa'>Senior Data Architect</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ordnancesurvey.csod.com/ats/careersite/jobdetails.aspx?site=1&c=ordnancesurvey&id=908&source=SocialMedia&utm_source=twitter&utm_medium=social&utm_term=&utm_content=&utm_campaign=eabd6045-fc90-4414-913a-bb6920ea66fa'>Senior Data Architect</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-15</p>
 <hr/>
@@ -301,7 +301,7 @@ database models; Documentation of functional requirements and system?...</p>
 <p><span class="badge badge-light">Seattle</span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/santander-consumer-usa/job/oEUvafwX'>Santander Consumer USA Careers - Data Architect</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/santander-consumer-usa/job/oEUvafwX'>Santander Consumer USA Careers - Data Architect</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-13</p>
 <hr/>
@@ -376,7 +376,7 @@ object-oriented programming experience to join our IT team as a Data Architect?.
 <p><span class="badge badge-light">Vilnius Vilnius</span></p>
 <p>Posted on: 2019-07-07</p>
 <hr/>
-<h5><a href='https://johnsoncontrols.referrals.selectminds.com/jobs/data-architect-75361'>Data Architect - Johnson Controls Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://johnsoncontrols.referrals.selectminds.com/jobs/data-architect-75361'>Data Architect - Johnson Controls Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jun 26, 2019 ... Data and Machine Learning Scientist. United States of America, Illinois, Chicago. 
 Engineering. Requisition #: WD30072470142. Sr. Software Engineer.</p>
